# markdown-viewer-skills-audit

./: .env.example  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TEST-PROMPTS.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json  vision.json
.agents/: AGENT-PROMPTS.md
archimate/: SKILL.md
architecture/: DEMO.md  SKILL.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  main.py  worker.py
backend/app/agents/: base.py  code_act_agent.py  code_reviewer.py  content_researcher.py  escalation.py  pr_creator.py
backend/app/api/: analytics.py  auth.py  billing.py  dashboard.py  deps.py  error_handlers.py  repos.py  sse.py  teams.py  tickets.py  webhooks.py
backend/app/models/: __init__.py  event.py  pipeline_run.py  repository.py  team.py  ticket.py  user.py
backend/app/services/: claude_service.py  cost_tracker.py  docker_service.py  encryption.py  event_logger.py  github_service.py  slack_service.py
backend/app/tasks/: pipeline.py
backend/tests/: conftest.py
backend/tests/load/: locustfile.py
backend/tests/test_api/: test_health.py
backend/tests/test_pipeline/: test_end_to_end.py  test_full_pipeline.py
backend/tests/test_services/: test_docker_service.py
bpmn/: SKILL.md
c4/: SKILL.md
canvas/: SKILL.md
cloud/: SKILL.md
data-analytics/: SKILL.md
diagram-export/: SKILL.md
docs/: CONFIGURATION.md  DEPLOYMENT.md  TICKETFORGE-README.md  design.md  gtm.md  prd.md  product-roadmap.md  product-vision.md
drawio/: SKILL.md
frontend/: package.json  (+2 more)
(+151 files in other folders)
