[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticketforge"
version = "0.1.0"
description = "TicketForge — From GitHub Issue to merged PR via multi-agent AI pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "anthropic>=0.39.0",
    "docker>=7.1.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=9.0.0",
    "arq>=0.26.0",
    "stripe>=11.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
